# circular_reference

./: .gitignore  README.md  pyproject.toml
app/: app.py  holder.py  item.py
