[tool.poetry]
name = "circular_reference"
version = "0.1.0"
description = "\"Circular reference in python and how to solve it"
authors = ["Abbas <abbazs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^21.3.0"
cattrs = "^1.9.0"
pytest = "^6.2.5"
black = "^21.12b0"
rich = "^10.16.1"
mypy = "^0.930"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
